Fixing textarea tagified rendering so it doesn't do any further formatting of the tagified text (like the default nl2br).  Added nowrap to .fabrikTag in main CSS, so icon and tag label don't get wrapped.

--- a/media/com_fabrik/css/fabrik.css
+++ b/media/com_fabrik/css/fabrik.css
@@ -666,38 +666,38 @@ form.fabrikForm label.radio {
 
 @media only screen and (max-device-width: 499px)
 {
-.fabrikWindow.modal {
-	max-width:100% !important;
-	left:0 !important;
-}
-
-.fabrikWindow.modal .contentWrapper {
-	max-width:100% !important;
-}
-
-.fabrikWindow .radius_search table.radius_table {
-	table-layout:fixed;
-	max-width:100%;
-}
-
-.fabrikWindow .radius_search table.radius_table td:first-child {
-	width:70px;
-}
-
-.radius_search_geocode_map {
-	width:300px;
-	height:275px;
-	margin-top:15px;
-}
+	.fabrikWindow.modal {
+		max-width:100% !important;
+		left:0 !important;
+	}
+	
+	.fabrikWindow.modal .contentWrapper {
+		max-width:100% !important;
+	}
+	
+	.fabrikWindow .radius_search table.radius_table {
+		table-layout:fixed;
+		max-width:100%;
+	}
+	
+	.fabrikWindow .radius_search table.radius_table td:first-child {
+		width:70px;
+	}
+	
+	.radius_search_geocode_map {
+		width:300px;
+		height:275px;
+		margin-top:15px;
+	}
 }
 
 @media only screen and (min-device-width: 500px)
 {
-.radius_search_geocode_map {
-	width:400px;
-	height:275px;
-	margin-top:15px;
-}
+	.radius_search_geocode_map {
+		width:400px;
+		height:275px;
+		margin-top:15px;
+	}
 }
 
 /** Fix for some templates without input-append, like Purity III */
@@ -708,8 +708,6 @@ form.fabrikForm label.radio {
 
 /** Prevent line breaks between sort icon and heading label in lists */
 
-.heading.fabrik_ordercell {
+.heading.fabrik_ordercell, .fabrikTag {
 	white-space: nowrap;
 }
-
-} 
